Archive2/96/86e717e0bac6cd/output
main.cpp: In instantiation of 'IT<C> fn(C&) [with C = T; IT<C> = I<int, T>; typename std::remove_reference<decltype (declval<C&>().fn(0))>::type = int]':
main.cpp:28:7:   required from here
main.cpp:22:26: error: no matching function for call to 'T::fn()'
   return IT<C>(&c, c.fn());
                          ^
main.cpp:22:26: note: candidate is:
main.cpp:12:8: note: int& T::fn(int)
   int& fn(int);
        ^
main.cpp:12:8: note:   candidate expects 1 argument, 0 provided
main.cpp: In function 'IT<C> fn(C&) [with C = T; IT<C> = I<int, T>; typename std::remove_reference<decltype (declval<C&>().fn(0))>::type = int]':
main.cpp:23:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
